--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,8 @@
     <script>
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
-        'arc-request-workspace-test.html'
+        'arc-request-workspace-test.html',
+        'request-workspace-append-event-test.html'
       ]);
     </script>
 
