Updating styling API

--- a/arc-request-workspace.html
+++ b/arc-request-workspace.html
@@ -153,9 +153,8 @@
     }
 
     bottom-sheet {
-      width: var(--arc-bottom-sheet-width, 100%);
-      max-width: var(--arc-bottom-sheet-max-width, 700px);
-      @apply --shadow-elevation-6dp;
+      width: var(--bottom-sheet-width, 100%);
+      max-width: var(--bottom-sheet-max-width, 700px);
     }
 
     .drop-target {
@@ -251,6 +250,8 @@
    * `--context-menu-item-background-color` | Background color of the context menu item | ``
    * `--context-menu-item-color-hover` | Color of the context menu item when hovered | ``
    * `--context-menu-item-background-color-hover` | Background color of the context menu item when hovered | ``
+   * `--bottom-sheet-width` | Bottom sheet width | `100%`
+   * `--bottom-sheet-max-width` | Bottom sheet max width | `700px`
    *
    * @customElement
    * @polymer
